--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -11,6 +11,7 @@ jobs:
       - uses: c-hive/gha-yarn-cache@v2
       - run: yarn install
       - run: yarn build
+      - run: mv googled29fba422c357ff8.html docs/
       - run: mv robots.txt docs/
       - run: mv ads.txt docs/
       - run: node sitemap.js
