refactor: move puzzle directory to docs for improved organization

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -15,6 +15,7 @@ jobs:
       - run: mv ads.txt docs/
       - run: mv game/ docs/
       - run: mv beauty/ docs/
+      - run: mv puzzle/ docs/
       - run: node sitemap.js
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
