--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -17,6 +17,7 @@ jobs:
       - run: mv beauty/ docs/
       - run: mv puzzle/ docs/
       - run: mv sports/ docs/
+      - run: mv new/ docs/
       - run: node sitemap.js
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
