feat: add service worker file and update deployment workflow to include it

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: yarn install
       - run: yarn build
+      - run: mv sw.js /docs/
       - run: mv googled29fba422c357ff8.html docs/
       - run: mv robots.txt docs/
       - run: mv ads.txt docs/
