--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,6 +20,7 @@ jobs:
       - run: mv sports/ docs/
       - run: mv new/ docs/
       - run: mv action/ docs/
+      - run: mv best/ docs/
       - run: node sitemap.js
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
